--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   image_picker: ^0.8.7
   get: ^4.6.5
   flutter_document_scanner: ^0.1.0
+  path_provider: ^2.0.14
   # camera: ^0.10.3+2s
 
 
