--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   get: ^4.6.5
   flutter_document_scanner: ^0.1.0
   path_provider: ^2.0.14
+  flutter_launcher_icons: ^0.13.1
   # camera: ^0.10.3+2s
 
 
@@ -56,6 +57,13 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: false
+  image_path: "assets/ic_launcher.png" 
+  adaptive_icon_background: "assets/ic_launcher.png"
+  adaptive_icon_foreground: "assets/ic_launcher.png"
 
 # The following section is specific to Flutter packages.
 flutter:
