--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "ocr_flutter" "\0"
+            VALUE "FileDescription", "Khmer_OCR" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "ocr_flutter" "\0"
+            VALUE "InternalName", "Khmer_OCR" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "ocr_flutter.exe" "\0"
-            VALUE "ProductName", "ocr_flutter" "\0"
+            VALUE "OriginalFilename", "Khmer_OCR.exe" "\0"
+            VALUE "ProductName", "Khmer_OCR" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
